crates/math-core/tests/snapshots/error_test__sideset_not_mathop_4.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sideset{}{}{\\int a}"
---
Error: Expected exactly one token as argument.
   ╭─[ <input>:1:13 ]
   │
 1 │ \sideset{}{}{\int a}
   │             ────┬───  
   │                 ╰───── expected exactly one token here
───╯
